- new tooltip for metadata in web-search; - hide navigation buttons for carousel if totalPages==1; - fixed truncated description for carousel in web-search; - search types moved over the carousel; - max-width for web-search set to 48em; - max-height for carousel set to 8em; - fixed truncate title for results in web-search; - fix "copy to my resources" button; - fix position of "copy to my resources" dialog; - spasing for cards and their content in video search.

--- a/WebContent/resources/learnweb-layout/sass/sections/_search.scss
+++ b/WebContent/resources/learnweb-layout/sass/sections/_search.scss
@@ -31,8 +31,9 @@
 
   .resource {
     &:hover {
-      .iconscontainer {
+      .tooltip-container {
         opacity: 1;
+        z-index: 2;
       }
     }
   }
@@ -256,43 +257,33 @@
       }
     }
   }*/
-
-  .iconscontainer {
+  #resource_dialog{
+    top: 10em !important;
+    left: 10em !important;
+  }
+  .tooltip-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     opacity: 0;
-    transition: all 0.2s ease-in-out;
-    .icon {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-
-      span {
-        position: absolute;
-        top: 60%;
-        margin-top: 0.5rem;
-        padding: .55rem 1rem;
-        background-color: white;
-        font-weight: 500;
-        white-space: nowrap;
-        border-radius: 50px;
-        box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1),
-        0 5px 15px rgba(0, 0, 0, 0.07);
-
-        pointer-events: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        opacity: 0;
-        transition: all 0.2s ease-in-out;
-      }
-      &:hover {
-        span {
-          top: 100%;
-          opacity: 1;
-          z-index: 2;
+    .tooltip-data {
+      position: absolute;
+      left: 100%;
+      line-height: 1.2rem;
+      padding: .55rem 1rem;
+      background-color: white;
+      font-weight: 500;
+      white-space: nowrap;
+      border-radius: 0.2rem;
+      transition: all 0.2s ease-in-out;
+      .tooltip-item {
+        margin-left: 0.1rem;
+        &:hover {
+          margin-left: 0;
+          border-left: 0.1rem solid #6c757d;
         }
       }
     }
@@ -303,6 +294,7 @@
     background: $gray-200 !important;
   }
   .ui-carousel-viewport {
+    max-height: 8em;
     .ui-carousel-items {
       .ui-carousel-item {
         border-radius: 0.1rem;
